@@ -1,0 +1,1 @@
+type Vnc::Geometry = Pattern['^\d+x\d+$']
